--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body
 .cloud
 {
     position: relative;
+    top: 50px;
     width: 320px;
     height: 100px;
     background: #fff;
@@ -44,4 +45,34 @@ body
     border-radius: 50%;
     background: #fff;
     box-shadow: 90px 0 0 30px #fff;
+}
+
+.text
+{
+    position: absolute;
+    top: 40px;
+    height: 20px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: #fff;
+    text-shadow: 0 0 5px #fff
+    0 0 15px #fff,
+    0 0 30px #fff;
+    transform-origin: bottom;
+    animation: animate 2s linear forwards;
+}
+@keyframes animate
+{
+  0%
+  {
+    transform: translateY(0) scale(1);
+  }
+  70%
+  {
+    transform: translateY(290px) scale(1); 
+  }
+  100%
+  {
+    transform: translateY(290px) scale(0);
+  }
 }
